# marketplace-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  openapi.json  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 00fe8a520f58_add_users_audit_logs_and_timezone_fixes.py  135481e7826e_initial_models.py  272ce6e5e393_add_productauditlog_persistent.py  4e5006daf388_restore_delivery_date.py  61927af1a642_add_users_table.py  882cb7f68fe9_add_timezone_to_timestamps.py
app/: main.py
app/api/: dependencies.py
app/api/v1/: router.py
app/api/v1/endpoints/: admin_auth.py  admin_offers.py  admin_products.py  admin_sellers.py  public.py
app/core/: config.py  database.py  exceptions.py  handlers.py  security.py
app/models/: base.py  models.py
app/repositories/: base.py  offer.py  product.py  seller.py  user.py
app/schemas/: models.py
app/services/: auth_service.py  catalog_service.py  product_service.py  storage.py
app/utils/: image.py
docs/ai/: AI_WORKFLOW.md  PROMPTS.md  WORKFLOW.md
scripts/: create_admin.py  seed.py
tests/: conftest.py  test_smoke.py
tests/smoke/: test_admin_auth.py  test_public_api.py
